--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
       gtag('config', 'G-QE00ZWYNSC');
     </script>
     <style>
-       .disabled{
-           opacity: .75;
+       .disabled{opacity: .75;
            pointer-events: none;
            filter: grayscale(1);
-           -webkit-filter: grayscale(1);
-       }
+           -webkit-filter: grayscale(1);}
+	#wcb{filter: hue-rotate(212deg);
+	transform: scale(.85);}
     </style>
 </head>
 
