5K Run & Runners Briefing

--- a/index.html
+++ b/index.html
@@ -84,7 +84,15 @@
                    <a class="link now" href="https://www.jawaravr.id/JawaraVR/EventDetail/58" target="_blank">
                      <strong>Virtual Run Registration</strong><br/>
                      <span>Team</span></a-->
-                   
+			
+		   <a class="link" href="http://nusanta.run/sundayrun5k" target="_blank">
+                   <strong>Road to NusantaRun Chapter 11 - 5K Sunday Run</strong><br/>
+                   <span>Kopi SANA Wijaya, Jakarta • 26 November 2023 • 06.30 WIB</span></a>
+			
+		   <a class="link" href="http://nusanta.run/nr11briefing" target="_blank">
+                   <strong>Runner & Volunteer Briefing</strong><br/>
+                   <span>Live on Zoom • 27 November 2023 • 18.15 WIB</span></a>
+			
                    <a class="link now" href="https://galangdana.kitabisa.com/partners/nusantarun" target="_blank">
                    <strong>Donate Now</strong><br/>
                    <span>KitaBisa.com</span></a>
