--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
                      <strong>Virtual Run Registration</strong><br/>
                      <span>Team</span></a-->
 			
-		   <a class="link" href="http://nusanta.run/sundayrun5k" target="_blank">
+		   <!--a class="link" href="http://nusanta.run/sundayrun5k" target="_blank">
                    <strong>Road to NusantaRun Chapter 11 - 5K Sunday Run</strong><br/>
-                   <span>Kopi SANA Wijaya, Jakarta • 26 November 2023 • 06.30 WIB</span></a>
+                   <span>Kopi SANA Wijaya, Jakarta • 26 November 2023 • 06.30 WIB</span></a-->
 			
-		   <a class="link" href="http://nusanta.run/nr11briefing" target="_blank">
+		   <!--a class="link" href="http://nusanta.run/nr11briefing" target="_blank">
                    <strong>Runner & Volunteer Briefing</strong><br/>
-                   <span>Live on Zoom • 27 November 2023 • 18.15 WIB</span></a>
+                   <span>Live on Zoom • 27 November 2023 • 18.15 WIB</span></--a>
 			
                    <a class="link now" href="https://galangdana.kitabisa.com/partners/nusantarun" target="_blank">
                    <strong>Donate Now</strong><br/>
@@ -122,7 +122,14 @@
                     <strong>Registration: Half Course</strong><br/>
                     <span>75 KM • Jember - Banyuwangi</span></a-->
                     
-                   
+		   <a class="link" href="https://nusanta.run/nr11maps" target="_blank">
+                    <strong>Checkpoint Maps</strong><br/>
+                    <span>NusantaRun Chapter 11</span></a>
+
+		   <a class="link" href="https://open.spotify.com/playlist/28Y3ciJH6gjoTREtDfqFgD?si=affaa38672d74622" target="_blank">
+                    <strong>Spotify Playlist</strong><br/>
+                    <span>NusantaRun Chapter 11</span></a>
+			
                    <div id="half">
                        <a class="link" href="https://ridewithgps.com/routes/44402722" target="_blank">
                          <strong>Full Course</strong><br/>
