--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			
 		   <!--a class="link" href="http://nusanta.run/nr11briefing" target="_blank">
                    <strong>Runner & Volunteer Briefing</strong><br/>
-                   <span>Live on Zoom • 27 November 2023 • 18.15 WIB</span></--a>
+                   <span>Live on Zoom • 27 November 2023 • 18.15 WIB</span></a-->
 			
                    <a class="link now" href="https://galangdana.kitabisa.com/partners/nusantarun" target="_blank">
                    <strong>Donate Now</strong><br/>
