--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                    <strong>Donate Now</strong><br/>
                    <span>KitaBisa.com</span></a>
                    
-                   <a class="link" href="/participants.pdf" target="_blank">
+                   <!--a class="link" href="/participants.pdf" target="_blank">
                     <strong>List of Participants</strong><br/>
-                    <span>NusantaRun Chapter 11</span></a>
+                    <span>NusantaRun Chapter 11</span></a-->
                    
                    <!---a class="link" href="https://linktr.ee/infogalangdana" target="_blank">
                     <strong>Tips Galang Dana</strong><br/>
