--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
                     <strong>Tips Galang Dana</strong><br/>
                     <span>KitaBisa.com</span></a--->
 
+<a class="link now" href="https://nusanta.run/nr11photos" target="_blank">
+                      <strong>Official Photos</strong><br/>
+                      <span>NusantaRun Chapter 11</span></a>
+
 <a class="link now" href="https://nusanta.run/officialresult-fc" target="_blank">
                       <strong>Full Course Official Result</strong><br/>
                       <span>NusantaRun Chapter 11</span></a>
@@ -132,9 +136,9 @@
                     <strong>Registration: Half Course</strong><br/>
                     <span>75 KM • Jember - Banyuwangi</span></a-->
                     
-		   <a class="link" href="https://nusanta.run/nr11maps" target="_blank">
+		   <!--a class="link" href="https://nusanta.run/nr11maps" target="_blank">
                     <strong>Checkpoint Maps</strong><br/>
-                    <span>NusantaRun Chapter 11</span></a>
+                    <span>NusantaRun Chapter 11</span></a-->
 
 		   <a class="link" href="https://open.spotify.com/playlist/28Y3ciJH6gjoTREtDfqFgD?si=affaa38672d74622" target="_blank">
                     <strong>Spotify Playlist</strong><br/>
