--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 <!--div style="max-width:500px; margin:2em 0 0;">
                    <iframe style="border-radius: 5px;box-shadow:0px 8px 25px #b12909;" width="100%" height="400" src="https://embed.kitabisa.com/campaign/nusantarun" title="KitaBisa" frameborder="0"></iframe>
                  </div-->
-                 <div style="max-width:500px; margin:2em 0 0;">
+                 <!--div style="max-width:500px; margin:2em 0 0;">
                     <iframe src="https://ridewithgps.com/embeds?type=route&id=44402722&title=NusantaRun%20Chapter%2011&metricUnits=true&sampleGraph=true&distanceMarkers=true" style="width: 1px; min-width: 100%; height: 400px; border: none;" scrolling="no"></iframe>
-                 </div>
+                 </div-->
                 <div id="links">
                    <!--a class="link now" href="https://www.jawaravr.id/JawaraVR/EventDetail/57" target="_blank">
                     <strong>Virtual Run Registration</strong><br/>
