--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta name='description' content="167 KM • Lumajang - Banyuwangi">
     <meta property="og:description" content="167 KM • Lumajang - Banyuwangi">
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://ig.nusanta.run"/>
-    <meta property="og:image" content="https://ig.nusanta.run/assets/images/shareable.jpg"/>
+    <meta property="og:url" content="https://xi.nusanta.run"/>
+    <meta property="og:image" content="https://xi.nusanta.run/assets/images/shareable.jpg"/>
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="630"/>
