--- a/index.html
+++ b/index.html
@@ -109,12 +109,14 @@
                       <strong>Official Photos</strong><br/>
                       <span>NusantaRun Chapter 11</span></a>
 
-<a class="link now" href="https://nusanta.run/officialresult-fc" target="_blank">
-                      <strong>Full Course Official Result</strong><br/>
-                      <span>NusantaRun Chapter 11</span></a>
-<a class="link now" href="https://nusanta.run/officialresult-hc" target="_blank">
-                      <strong>Half Course Official Result</strong><br/>
-                      <span>NusantaRun Chapter 11</span></a>
+			<div id="half">
+				<a class="link now" href="https://nusanta.run/officialresult-fc" target="_blank">
+				                      <strong>Full Course</strong><br/>
+				                      <span>Official Result</span></a>
+				<a class="link now" href="https://nusanta.run/officialresult-hc" target="_blank">
+				                      <strong>Half Course</strong><br/>
+				                      <span>Official Result</span></a>
+			</div>
                     
 <!--a class="link now" href="https://nusanta.run/11timing" target="_blank">
                       <strong>(LIVE) Official Timing<br/>
