--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                     <strong>Tips Galang Dana</strong><br/>
                     <span>KitaBisa.com</span></a--->
 
-<a class="link now" href="https://nusanta.run/nr11photos" target="_blank">
-                      <strong>Official Photos</strong><br/>
-                      <span>NusantaRun Chapter 11</span></a>
+			<a class="link now" href="https://hcstud.io/NR11" target="_blank">
+	                      <strong>Official Photos</strong><br/>
+	                      <span>NusantaRun Chapter 11</span></a>
 
 			<div id="half">
 				<a class="link now" href="https://nusanta.run/officialresult-fc" target="_blank">
