--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
 	                      <strong>Official Photos</strong><br/>
 	                      <span>NusantaRun Chapter 11</span></a>
 
+			<a class="link now" href="https://nusanta.run/11album" target="_blank">
+	                      <strong>Share your moments</strong><br/>
+	                      <span>NusantaRun Chapter 11</span></a>
+
 			<div id="half">
 				<a class="link now" href="https://nusanta.run/officialresult-fc" target="_blank">
 				                      <strong>Full Course</strong><br/>
