--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
 	                      <span>NusantaRun Chapter 11</span></a>
 
 			<div id="half">
-				<a class="link now" href="https://nusanta.run/officialresult-fc" target="_blank">
+				<a class="link now" href="https://nusanta.run/11result-fc" target="_blank">
 				                      <strong>Full Course</strong><br/>
 				                      <span>Official Result</span></a>
-				<a class="link now" href="https://nusanta.run/officialresult-hc" target="_blank">
+				<a class="link now" href="https://nusanta.run/11result-hc" target="_blank">
 				                      <strong>Half Course</strong><br/>
 				                      <span>Official Result</span></a>
 			</div>
