--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                    <span>Live on Zoom • 27 November 2023 • 18.15 WIB</span></a-->
 			
                    <a class="link now" href="https://nusanta.run/11rayakankebaikan" target="_blank">
-                   <strong>Rayakan Kebaikan</strong><br/>
+                   <strong>(Re-registration) Rayakan Kebaikan</strong><br/>
                    <span>27 January 2024 • MRT Bundaran HI</span></a>
                    
                    <!--a class="link" href="/participants.pdf" target="_blank">
