--- a/index.html
+++ b/index.html
@@ -92,10 +92,14 @@
 		   <!--a class="link" href="http://nusanta.run/nr11briefing" target="_blank">
                    <strong>Runner & Volunteer Briefing</strong><br/>
                    <span>Live on Zoom • 27 November 2023 • 18.15 WIB</span></a-->
+
+			<a class="link now" href="https://tinyurl.com/EduWisataMRTJ" target="_blank">
+                   <strong>Rayakan Kebaikan: Eduwisata MRT Jakarta</strong><br/>
+                   <span>27 January 2024 • MRT Blok M BCA - Bundaran HI</span></a>
 			
-                   <a class="link now" href="https://nusanta.run/11rayakankebaikan" target="_blank">
+                   <!--a class="link now" href="https://nusanta.run/11rayakankebaikan" target="_blank">
                    <strong>(Re-registration) Rayakan Kebaikan</strong><br/>
-                   <span>27 January 2024 • MRT Bundaran HI</span></a>
+                   <span>27 January 2024 • MRT Bundaran HI</span></a-->
                    
                    <!--a class="link" href="/participants.pdf" target="_blank">
                     <strong>List of Participants</strong><br/>
