--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                    <strong>Rayakan Kebaikan: Eduwisata MRT Jakarta</strong><br/>
                    <span>27 January 2024 • MRT Blok M BCA - Bundaran HI</span></a-->
 			
-                   <!--a class="link now" href="https://nusanta.run/11rayakankebaikan" target="_blank">
-                   <strong>(Re-registration) Rayakan Kebaikan</strong><br/>
-                   <span>27 January 2024 • MRT Bundaran HI</span></a-->
+                   <a class="link now" href="https://nusanta.run/11rayakankebaikan" target="_blank">
+                   <strong>Official Photos • Rayakan Kebaikan</strong><br/>
+                   <span>27 January 2024 • MRT Bundaran HI</span></a>
                    
                    <!--a class="link" href="/participants.pdf" target="_blank">
                     <strong>List of Participants</strong><br/>
