--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                  </div-->
 
 		<div id="youtube" style="max-width:500px; margin:2em 0 1.5em">
-                      <iframe style="border-radius: 15px;" width="100%" height="280" src="https://www.youtube.com/embed/Oy3lYVEIYOY?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      <iframe style="border-radius: 20px 0;" width="100%" height="280" src="https://www.youtube.com/embed/Oy3lYVEIYOY?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
 		    
                 <div id="links">
