--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>NusantaRun Chapter 11: Final Java Series</title>
-    <meta property="og:title" content="NusantaRun Chapter 11: Final Java Series"/>
-    <meta name='description' content="167 KM • Lumajang - Banyuwangi">
-    <meta property="og:description" content="167 KM • Lumajang - Banyuwangi">
+    <title>NusantaRun Chapter 12: Berjejak Menggelora</title>
+    <meta property="og:title" content="NusantaRun Chapter 12: Berjejak Menggelora"/>
+    <meta name='description' content="145 KM • Gilimanuk - Kintamani">
+    <meta property="og:description" content="145 KM • Gilimanuk - Kintamani">
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://xi.nusanta.run"/>
-    <meta property="og:image" content="https://xi.nusanta.run/assets/images/shareable.jpg"/>
+    <meta property="og:url" content="https://12.nusanta.run"/>
+    <meta property="og:image" content="https://12.nusanta.run/assets/images/shareable.jpg"/>
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="630"/>
