--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
                   <a class="link" href="https://nusanta.run/maps" target="_blank">
                     <strong>NusantaRun Routes</strong><br/>
                     <span>via Google Maps</span></a>
+		
+                  <a class="link" href="https://nusanta.run/12release" target="_blank">
+                    <strong>Media Release</strong><br/>
+                    <span>NusantaRun Chapter 12</span></a>
+			
+                  <a class="link" href="https://nusanta.run/12media" target="_blank">
+                    <strong>Media Gathering Documentation</strong><br/>
+                    <span>4 December 2024 - Rasa Dewata, Bali</span></a>
                     
                 </div>
                 
