--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                      <strong>Live Tracker</strong><br/>
                      <span>Gilimanuk - Kintamani</span></a>
                   
-                  <a class="link" href="https://nusanta.run/12brief" target="_blank">
-                    <strong>Runners Brief</strong><br/>
+                  <a class="link" href="https://nusanta.run/12guide" target="_blank">
+                    <strong>Guide Book</strong><br/>
                     <span>6-8 December 2024</span></a>
                   
                   <a class="link" href="https://nusanta.run/maps" target="_blank">
