--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
 	                    <strong>Media Gathering Documentation</strong><br/>
 	                    <span>4 December 2024 - Rasa Dewata, Bali</span></a>
 		</div>
+
+		<div class="support">
+			<img src="assets/images/12_support.png">
+		</div>
                 
                 <div class="footer">
                      <a href="https://www.facebook.com/nusantarun" target="_blank" class="social">
