--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	                    <span>4 December 2024 - Rasa Dewata, Bali</span></a>
 		</div>
 
-		<div class="support">
+		<div class="supports">
 			<img src="assets/images/12_support.png">
 		</div>
                 
