--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <meta name="apple-mobile-web-app-title" content="NusantaRun">
     <meta name="application-name" content="NusantaRun">
     <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png"/>
-    <meta name="theme-color" content="#ce300b"/>
-    <meta name="msapplication-navbutton-color" content="#ce300b"/>
+    <meta name="theme-color" content="#c34327"/>
+    <meta name="msapplication-navbutton-color" content="#c34327"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="#ce300b"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="#c34327"/>
     <link rel="stylesheet" href="assets/css/style-12.css">
     <link rel="icon" href="assets/images/favicon.png" type="image/x-icon" />
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
