--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
                   <a class="link" href="https://nusanta.run/12live" target="_blank">
                      <strong>Live Tracker</strong><br/>
                      <span>Gilimanuk - Kintamani</span></a>
+			
+		<div id="half">
+			<a class="link" href="https://nusanta.run/12result-fc" target="_blank">
+	                    <strong>Full Course</strong><br/>
+	                    <span>Official Race Result</span></a>
+			
+                  	<a class="link" href="https://nusanta.run/12result-hc" target="_blank">
+	                    <strong>Half Course</strong><br/>
+	                    <span>Official Race Result</span></a>
+		</div>
                   
                   <a class="link" href="https://nusanta.run/12guide" target="_blank">
                     <strong>Guide Book</strong><br/>
