--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			
                   	<a class="link" href="https://nusanta.run/12media" target="_blank">
 	                    <strong>Media Gathering Documentation</strong><br/>
-	                    <span>4 December 2024 - Rasa Dewata, Bali</span></a>
+	                    <span>4•12•2024 - Rasa Dewata, Bali</span></a>
 		</div>
 
 		<div class="supports">
