--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
 	                    <strong>Half Course</strong><br/>
 	                    <span>Official Race Result</span></a>
 		</div>
+
+                  <a class="link" href="https://nusanta.run/12" target="_blank">
+                     <strong>Official Documentation</strong><br/>
+                     <span>NusantaRun Chapter 12</span></a>
+			
+                  <a class="link" href="https://nusanta.run/12album" target="_blank">
+                     <strong>Share your moments</strong><br/>
+                     <span>#BerjejakMenggelora</span></a>
                   
                   <a class="link" href="https://nusanta.run/12guide" target="_blank">
                     <strong>Guide Book</strong><br/>
