--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                      <strong>Donate Now</strong><br/>
                      <span>via KitaBisa.com</span></a>
 			
-                  <a class="link" href="https://nusanta.run/12live" target="_blank">
+                  <!--a class="link" href="https://nusanta.run/12live" target="_blank">
                      <strong>Live Tracker</strong><br/>
-                     <span>Gilimanuk - Kintamani</span></a>
+                     <span>Gilimanuk - Kintamani</span></a-->
 			
 		<div id="half">
 			<a class="link" href="https://nusanta.run/12result-fc" target="_blank">
@@ -93,16 +93,16 @@
 		</div>
 
                   <a class="link" href="https://nusanta.run/12" target="_blank">
-                     <strong>Official Documentation</strong><br/>
+                     <strong>Official Documentation (Coming Soon)</strong><br/>
                      <span>NusantaRun Chapter 12</span></a>
 			
                   <a class="link" href="https://nusanta.run/12album" target="_blank">
                      <strong>Share your moments</strong><br/>
                      <span>#BerjejakMenggelora</span></a>
                   
-                  <a class="link" href="https://nusanta.run/12guide" target="_blank">
+                  <!--a class="link" href="https://nusanta.run/12guide" target="_blank">
                     <strong>Guide Book</strong><br/>
-                    <span>6-8 December 2024</span></a>
+                    <span>6-8 December 2024</span></a-->
                   
                   <a class="link" href="https://nusanta.run/maps" target="_blank">
                     <strong>NusantaRun Routes</strong><br/>
