--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
 		  <a class="link now" href="https://kitabisa.com/nusantarun" target="_blank">
                      <strong>Donate Now</strong><br/>
                      <span>via KitaBisa.com</span></a>
+
+                  <a class="link now" href="https://nusanta.run/12" target="_blank">
+                     <strong>Official Documentation</strong><br/>
+                     <span>NusantaRun Chapter 12</span></a>
+			
+                  <a class="link" href="https://nusanta.run/12album" target="_blank">
+                     <strong>Share your moments</strong><br/>
+                     <span>#BerjejakMenggelora</span></a>
+                  
 			
                   <!--a class="link" href="https://nusanta.run/12live" target="_blank">
                      <strong>Live Tracker</strong><br/>
@@ -92,14 +101,6 @@
 	                    <span>Official Race Result</span></a>
 		</div>
 
-                  <a class="link" href="https://nusanta.run/12" target="_blank">
-                     <strong>Official Documentation (Coming Soon)</strong><br/>
-                     <span>NusantaRun Chapter 12</span></a>
-			
-                  <a class="link" href="https://nusanta.run/12album" target="_blank">
-                     <strong>Share your moments</strong><br/>
-                     <span>#BerjejakMenggelora</span></a>
-                  
                   <!--a class="link" href="https://nusanta.run/12guide" target="_blank">
                     <strong>Guide Book</strong><br/>
                     <span>6-8 December 2024</span></a-->
